--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This project using time series dataset from Yahoo to detect subsequence outlier. You can download datasets in this link https://research.yahoo.com/news/announcing-benchmark-dataset-time-series-anomaly-detection.
+Dataset yang digunakan pada peoject ini disediakan oleh Yahoo Benchmark Dataset. Dataset ini berupa point outlier yang telah memiliki label 0 dan 1, dimana label 0 mengindikasikan bukan outlier, dan label 1 mengindikasikan outlier. Datasets dapat di download pada link berikut https://research.yahoo.com/news/announcing-benchmark-dataset-time-series-anomaly-detection.
+Proses awal yaitu pemrosesan dataset untuk membentuk subsequence. Selanjutnya dilakukan pengukuran jarak pada proses K-Means Clustering menggunakan Euclidean Distance dan Mahalanobis Distance.
+Proses akhir yaitu perhitungan nilai/skor global outlier pada setiap cluster akhir yang terbentuk.
